-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
15584
[root@mercury tests]# cat /proc/fs/lustre/llite/*/sbi_flags checksum flock xattr acl lru_resize 64bit_hash agl verbose layout xattr
The problem is in the definition of LL_SBI_FLAGS in llite_internal.h where two "xattr" coexist.
#define LL_SBI_FLAGS { \
"nolck", \
"checksum", \
"flock", \
"xattr", \
"acl", \
"???", \
"rmt_client", \
"mds_capa", \
"oss_capa", \
"flock", \
"lru_resize", \
"lazy_statfs", \
"som", \
"32bit_api", \
"64bit_hash", \
"agl", \
"verbose", \
"layout", \
"user_fid2path",\
"xattr", \
The first one should be changed to "user_xattr" and the latter one should be "xattr_cache".