lustre/llite/llite_internal.h
@@ -426,7 +426,7 @@ enum stats_track_type {
 	"nolck",	\
 	"checksum",	\
 	"flock",	\
-	"xattr",	\
+	"user_xattr",	\
 	"acl",		\
 	"???",		\
 	"rmt_client",	\
@@ -442,7 +442,7 @@ enum stats_track_type {
 	"verbose",	\
 	"layout",	\
 	"user_fid2path",\
-	"xattr",	\
+	"xattr_cache",	\
 	"norootsquash",	\
 }
 
